--- a/2016/styles/_site_nav.scss
+++ b/2016/styles/_site_nav.scss
@@ -1,36 +1,42 @@
 .site-nav {
-  background: $grey-light;
-  padding: 1rem;
-  a {
-    display: block;
-    width: 100%;
-  }
-  @media (min-width: 900px) {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    z-index: 1;
-    text-align: center;
-    padding: 0;
+  display: none;
+}
+
+@media (min-width: 500px) {
+  .site-nav {
+    background: $grey-light;
+    padding: 1rem;
     a {
-      display: inline-block;
-      border: none;
-      font-size: $nav-links-size;
-      color: $grey-dark;
-      text-transform: uppercase;
-      width: auto;
-      padding: 0 0.25rem;
-      line-height: 51px;
-      box-sizing: border-box;
-      border-bottom: 2px solid $grey-light;
-      font-weight: normal;
+      display: block;
+      width: 100%;
+    }
+    @media (min-width: 900px) {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      z-index: 1;
+      text-align: center;
+      padding: 0;
+      a {
+        display: inline-block;
+        border: none;
+        font-size: $nav-links-size;
+        color: $grey-dark;
+        text-transform: uppercase;
+        width: auto;
+        padding: 0 0.25rem;
+        line-height: 51px;
+        box-sizing: border-box;
+        border-bottom: 2px solid $grey-light;
+        font-weight: normal;
 
-      &:hover, &:active, &:focus {
-        color: $black;
-        border-bottom: 2px solid $blue-grey;
-        text-decoration: none;
+        &:hover, &:active, &:focus {
+          color: $black;
+          border-bottom: 2px solid $blue-grey;
+          text-decoration: none;
 
+        }
       }
     }
   }
